--- a/nodejs/Node.js 웹개발로 알아보는 백엔드 자바스크립트의 이해/nodeServerVimeo/public/form.html
+++ b/nodejs/Node.js 웹개발로 알아보는 백엔드 자바스크립트의 이해/nodeServerVimeo/public/form.html
@@ -11,6 +11,8 @@
     </form>
     <button class ="ajaxsend">ajaxsend</button>
 
+    <div class ="result"></div>
+
     <script>
         document.querySelector('.ajaxsend').addEventListener('click',function(){
             var inputdata = document.forms[0].elements[0].value;
@@ -28,8 +30,9 @@
 
             xhr.addEventListener('load', function(){
                 var result = JSON.parse(xhr.responseText);
-                if(result.result !=="ok") return;
-                document.querySelector(".result").innerHTML = result.email;
+                var resultDiv = document.querySelector(".result");
+                if(result.result !=="ok") resultDiv.innerHTML = "your email is not found";
+                else resultDiv.innerHTML = result.name;
             });
         }
     </script>
